@@ -3,4 +3,5 @@
 #define DEFAULT_PLAYER_MARKUP 	"[%name%: &[%artist% - ]%title%]|%name%|[%artist% - ]%title%|%shortfile%|"
 #define DEFAULT_HIDE_ON_STARTUP 0
 #define DEFAULT_TRAY_ICON_ENABLE 1
+#define DEFAULT_AUTOCONNECT 0
 #define DEFAULT_TRAY_MARKUP "[<span size=\"small\">%name%</span>\n][<span size=\"large\">%title%</span>\n][%artist%][\n<span size=\"small\">%album% [(track %track%)]</span>]|%shortfile%|"
