@@ -1,3 +1,5 @@
+24-05-2005 <Qball> <Qball@qballcow.nl>
+	* src/mpdinteraction.c:		set window title on connect/disconnect
 23-05-2005 <Qball> <Qball@qballcow.nl>
 	* src/libmpdclient.[c|h]:	Installed version with qball "advanced
 	search and list" functions
